--- a/icooc/icvsooc_gpt.ipynb
+++ b/icooc/icvsooc_gpt.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import csv\n",
+    "\n",
     "import numpy as np\n",
     "import sklearn.metrics\n",
     "\n",
-    "with open(\"icvsoocvalidation_results_curie.csv\", newline=\"\") as f:\n",
+    "with open(\"icvsoocvalidation_results.csv\", newline=\"\") as f:\n",
     "    reader = csv.reader(f)\n",
     "    next(reader)  # skip header\n",
     "    results = np.array(list(reader), int)"
@@ -20,12 +21,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "pred = results[:, 1]\n",
-    "true = results[:, 0]\n",
-    "true"
+    "true = results[:, 0]"
    ],
    "metadata": {
     "collapsed": false
@@ -33,8 +33,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.95      0.94      0.94        64\n",
+      "           1       0.94      0.95      0.94        61\n",
+      "\n",
+      "    accuracy                           0.94       125\n",
+      "   macro avg       0.94      0.94      0.94       125\n",
+      "weighted avg       0.94      0.94      0.94       125\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(sklearn.metrics.classification_report(true, pred))"
    ],
@@ -44,8 +60,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 4,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.944"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sklearn.metrics.accuracy_score(true, pred)"
    ],
